# random-math

./: LICENSE  README.md  env.yml  pyproject.toml  requirements.txt
.github/workflows/: 1_0-package-ci.yml  1_1-code-check.yml  2_0-package-prerelease.yml  2_0-package-release.yml  2_1-publish-prerelease.yml  2_1-publish-release.yml  3_0-api-ci.yml  3_0-package-to-api.yml  3_1-api-code-check.yml  3_2-api-deploy.yml  package-prerelease.yml  publish-prerelease.yml  publish-python-package.yml  publish-release.yml  python-code-check.yml  python-package.yml
docs/: RandomMath.html  RandomMathOperations.html  index.html  search.js
docs/RandomMath/: RandomMathOperations.html  RandomMathOperations.md  index.md
src/RandomMath/: RandomMathOperations.py
src/apiRandomMath/: main.py  requirements.txt
src/test/: test_RandomMathOperations.py
test/: test_RandomMathOperations.py
test/RandomMath/: test_RandomMathOperations.py
