[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "python_complex_operations_devops"
version = "0.0.1"
authors = [
  { name="Rafael Maia de Souza", email="rmaiadesouza@gmail.com" },
]
description = "Complex operations package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.urls]
"Homepage" = "https://github.com/rmaiaaaa/python-complex-operations-devops"
"Bug Tracker" = "https://github.com/rmaiaaaa/python-complex-operations-devops/issues"