[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "random_math_rmaiaaaa"
version = "v0.0.13"
authors = [
  { name="Rafael Maia de Souza", email="rmaiadesouza@gmail.com" },
]
description = "Random Math Package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.urls]
"Homepage" = "https://github.com/rmaiaaaa/random-math"
"Bug Tracker" = "https://github.com/rmaiaaaa/random-math/issues"